<resources>
    <string name="app_name">RickTech</string>
    <string name="field_required">Field Required</string>
    <string name="map_api_key">AIzaSyAnjvMAJEmiAv3yeCDUXWv-PboXiT_uaoQ</string>

    <string name="inv_email">Invalid Email</string>
    <string name="phone">Phone number</string>
    <string name="login">Login</string>
    <string name="please_enter_code_sent_to">Please Enter Code Sent To You</string>
    <string name="resend">Resend</string>
    <string name="confirm">Confirm</string>
    <string name="notifications">Notifications</string>
    <string name="ok">Ok</string>
    <string name="failed">Faild</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="departments">Departments</string>
    <string name="no_data_to_show">No data to show</string>
    <string name="name">Name</string>
    <string name="personal_information">Personal information</string>
    <string name="more">More</string>
    <string name="about_us">About us</string>
    <string name="address">Address</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="cancel">Cancel</string>
    <string name="perm_image_denied">Permission image denied</string>
    <string name="update_profile">Update Profile</string>
    <string name="details">Details</string>
    <string name="no_image">No Images</string>
    <string name="wait">Wait</string>
    <string name="user_blocked">User Blocked</string>
    <string name="select_location_on_map">Select Location On Map</string>
    <string name="user_exist">User Exist</string>
    <string name="select">Select</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="show_location_on_map">Show location on map</string>
    <string name="not_ava">Not available</string>
    <string name="egp">EGP</string>
    <string name="logout">Logout</string>
    <string name="offers">Offers</string>
    <string name="favorite">Favorite</string>
    <string name="recently">Recently</string>
    <string name="low_price">Low Price</string>
    <string name="high_price">High Price</string>
    <string name="all">ALL</string>
    <string name="ch_image">Choose  Image</string>
    <string name="ch_dept">Choose Category</string>
    <string name="add_a_used_product">Add a used product</string>
    <string name="product_images">Product Images</string>
    <string name="category">Category</string>
    <string name="product_name">Product Name</string>
    <string name="location">Location</string>
    <string name="whats_app_number">Whatsapp Number</string>
    <string name="price">Price</string>
    <string name="description">Description</string>
    <string name="publish">publish</string>
    <string name="select_the_address">Select The Address</string>
    <string name="market_for_used">Market for used</string>
    <string name="create_ad_now_for_free">Create ad now for free</string>
    <string name="supermarkets">Supermarkets</string>
    <string name="most_common_shops">Most common shops</string>
    <string name="offers_and_sales">Offers and sales</string>
    <string name="search">Search....</string>
    <string name="pharmacies">Pharmacies</string>
    <string name="orders">Orders</string>
    <string name="used_products">Used products</string>
    <string name="contact_us">Contact us</string>
    <string name="account">Account</string>
    <string name="products">Products</string>
    <string name="services">Services</string>
    <string name="shops">Shops</string>
    <string name="sign_up">Sign Up</string>
    <string name="whatsapp_number">WhatsApp number</string>
    <string name="bio">bio</string>
    <string name="service_price">Service price</string>
    <string name="market_name">Market name</string>
    <string name="seller_information">Seller information</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="copoun">Copoun</string>
    <string name="activation">Activation</string>
    <string name="buy2">Buy</string>
    <string name="total">Total :</string>
    <string name="cart">Cart</string>
    <string name="location_information">Location Information</string>
    <string name="location_detials">Location Detials</string>
    <string name="write_more_details">Write More Detials</string>
    <string name="user_phone">User Phone</string>
    <string name="confirm_location">Confirm Location</string>
    <string name="write_name">Write Name</string>
    <string name="order_detials">Order Detials</string>
    <string name="shipping_site">Shipping site</string>
    <string name="the_total_of_the_cart">Total Of The Cart</string>
    <string name="subtotal">SubTotal</string>
    <string name="copoun2">Copoun</string>
    <string name="total_payments">Total Payment</string>
    <string name="search_name">Search Name</string>
    <string name="department">Department</string>
    <string name="filter_your_results">Filter Result</string>
    <string name="reset">Reset</string>
    <string name="user">User</string>
    <string name="market_or_shop">Market or shop</string>
    <string name="provider">Provider</string>
    <string name="call">Call</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="filter">Filter</string>
    <string name="search2">Search...</string>
    <string name="add_product">Add Product</string>
    <string name="product_image">Product image</string>
    <string name="add">Add</string>
    <string name="add_department">Add department</string>
    <string name="order_num">Order num</string>
    <string name="amount">Amount</string>
    <string name="current">Current</string>
    <string name="previous">Previous</string>
    <string name="accept">Accept</string>
    <string name="refuse">Refuse</string>
</resources>