<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="model"
            type="com.app.market_street.models.AddProductModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/trans_black"
        >
        <LinearLayout
            android:id="@+id/ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/custom_bg"
            android:layout_marginTop="30dp"
            android:padding="16dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/add_product"
                android:textColor="@color/black"
                android:textSize="18sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColor="@color/gray16"
                android:textSize="15sp"
                android:text="@string/product_image"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp"

                >
                <FrameLayout
                    android:layout_width="65dp"
                    android:layout_height="55dp"
                    android:layerType="software"
                    android:background="@drawable/rounded_gap"
                    >
                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_add"
                        />
                </FrameLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />


            </LinearLayout>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/small_rounded_gray17"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:layout_marginTop="10dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:hint="@string/product_name"
                android:text="@={model.name}"
                error="@{model.error_name}"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:background="@drawable/small_rounded_gray17"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:layout_marginTop="10dp"
                android:padding="16dp"
                android:hint="@string/details"
                android:gravity="top"
                android:text="@={model.details}"
                error="@{model.error_details}"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/small_rounded_gray17"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:layout_marginTop="10dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:hint="@string/price"
                android:inputType="numberDecimal"
                android:text="@={model.price}"
                error="@{model.error_price}"

                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:text="@string/add"
                android:background="@drawable/small_rounded_primary"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                />
        </LinearLayout>
        <androidx.cardview.widget.CardView
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:cardElevation="5dp"
            android:layout_margin="8dp"
            app:layout_constraintStart_toStartOf="@id/ll"
            app:layout_constraintTop_toTopOf="@id/ll"
            app:layout_constraintBottom_toTopOf="@id/ll"
            app:cardCornerRadius="12dp"
            >
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_close2"
                android:padding="5dp"
                />
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>